--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@gsap/react": "^2.1.2",
     "clsx": "^2.1.1",
     "framer-motion": "^12.6.2",
+    "lenis": "^1.2.3",
     "next": "15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
