--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.6.2",
     "lenis": "^1.2.3",
+    "lucide-react": "^0.487.0",
     "next": "15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
